# KDevelopTemplates

./: .gitignore  CMakeLists.txt  package.sh
JavaTemplates/: .gitignore  CMakeLists.txt  README.md  install.sh
JavaTemplates/basic_javafx_template/: .gitignore  basic_javafx_template.kdevtemplate
JavaTemplates/java_apache_commons_cli_template/: .gitignore  Makefile  README  pom.xml
JavaTemplates/java_argparse4j_cli_template/: Makefile  README  java_argparse4j_cli_template.kdevtemplate  pom.xml
JavaTemplates/java_jcommander_cli_template/: .gitignore  README  pom.xml
PythonTemplates/PythonArgparseCLI/: CMakeLists.txt  README.md
PythonTemplates/PythonArgparseCLI/PythonArgparseProject/: %{APPNAMELC}.py
PythonTemplates/PythonArgparseCLI/PythonArgparseTypedModularProject/: Makefile
PythonTemplates/PythonArgparseCLI/PythonArgparseTypedModularProject/%{APPNAMELC}/: main.py
PythonTemplates/PythonArgparseCLI/PythonArgparseTypedModularProject/%{APPNAMELC}/utilities/: ArgsNamespace.py
PythonTemplates/PythonArgparseCLI/PythonArgparseTypedProject/: %{APPNAMELC}.py  python3_argparse_cli.kdevtemplate
QT_CPP_Templates/KrunnerTemplates/krunner/: .gitignore  CMakeLists.txt  README.md
QT_CPP_Templates/KrunnerTemplates/krunner/basic_runner/: CMakeLists.txt
QT_CPP_Templates/KrunnerTemplates/krunner/basic_runner/src/: %{APPNAMELC}.cpp
QT_CPP_Templates/KrunnerTemplates/krunner/extended_runner/: README.md
QT_CPP_Templates/KrunnerTemplates/krunner/extended_runner/src/: %{APPNAMELC}.cpp  plasma-runner-%{APPNAMELC}.desktop
QT_CPP_Templates/KrunnerTemplates/runner_kcmodule/: .gitignore  CMakeLists.txt  README.md
QT_CPP_Templates/KrunnerTemplates/runner_kcmodule/extendedrunnerwithconfig/: .gitignore  CMakeLists.txt  README.md
QT_CPP_Templates/KrunnerTemplates/runner_kcmodule/extendedrunnerwithconfig/src/: %{APPNAMELC}.cpp
QT_CPP_Templates/KrunnerTemplates/runner_kcmodule/extendedrunnerwithconfig/src/config/: %{APPNAMELC}_config.h  %{APPNAMELC}_config.ui
QT_CPP_Templates/KrunnerTemplates/runner_kcmodule/runnerwithconfig/: README.md  install.sh  runnerwithkcmodule.kdevtemplate
QT_CPP_Templates/KrunnerTemplates/runner_kcmodule/runnerwithconfig/src/: %{APPNAMELC}.cpp
QT_CPP_Templates/KrunnerTemplates/runner_kcmodule/runnerwithconfig/src/config/: %{APPNAMELC}_config.cpp  %{APPNAMELC}_config.h  plasma-runner-%{APPNAMELC}_config.desktop
QT_CPP_Templates/QTCLITemplates/: .gitignore  CMakeLists.txt
QT_CPP_Templates/QTCLITemplates/basic_qt_cli_template/: CMakeLists.txt  basic_qt_cli_template.kdevtemplate  main.cpp
QT_CPP_Templates/QTCLITemplates/validated_qt_cli_template/: CMakeLists.txt  Makefile  Validator.cpp  install.sh  main.cpp  validated_qt_cli_template.kdevtemplate
dolphin/: CMakeLists.txt
dolphin/DolphinServiceMenuPlugin/dolphinservicemenuplugin/: CMakeLists.txt  README.md
dolphin/DolphinServiceMenus/: CMakeLists.txt  package.sh
dolphin/DolphinServiceMenus/dolphinservicemenus/: Submenu.desktop  dolphinservicemenus.kdevtemplate
dolphin/UpdatedDolphinServiceMenuPlugin/advanced_dolphin_plugin/src/: %{APPNAMELC}.cpp  %{APPNAMELC}.h  CMakeLists.txt
dolphin/advanced_dolphin_plugin/: CMakeLists.txt  README.md  advanced_dolphin_plugin.kdevtemplate
dolphin/dolphinservicemenuplugin/src/: %{APPNAMELC}.cpp  %{APPNAMELC}.desktop  CMakeLists.txt
java_templates/: CMakeLists.txt
kdevelop_app_template_template/: .gitignore  CMakeLists.txt  package.sh
kdevelop_file_template/: .gitignore  CMakeLists.txt  kdevelop_file_template_template.kdevtemplate
kdevelop_file_template/%{APPNAMELC}/: %{APPNAMELC}.desktop  DemoFile.txt
kdevelop_file_template_template/: CMakeLists.txt  package.sh
kdevelop_file_template_template/kdevelop_file_template_template/: package  package.sh
kdevelop_file_template_template/kdevelop_file_template_template/%{APPNAMELC}/: %{APPNAMELC}.desktop  options.kcfg
krunner_dbus_templates/: CMakeLists.txt
krunner_dbus_templates/krunner_dbus_cpp/: .gitignore  CMakeLists.txt  package.sh
krunner_dbus_templates/krunner_dbus_cpp/krunner_dbus_cpp/: CMakeLists.txt  README.md  krunner_dbus_cpp.kdevtemplate
krunner_dbus_templates/krunner_dbus_cpp/krunner_dbus_cpp/src/: %{APPNAMELC}.cpp  %{APPNAMELC}.desktop  %{APPNAMELC}.h  CMakeLists.txt  dbus_utils.h
krunner_dbus_templates/krunner_dbus_javascript/: .gitignore  README.md  krunner_dbus_javascript.kdevtemplate  package.json  plasma-runner-%{APPNAMELC}.desktop
krunner_dbus_templates/krunner_dbus_javascript/src/: dbus-connection.js  index.js  runner.js
krunner_dbus_templates/modular_krunner_python_template/: .gitignore  Makefile  README.md  python_modular_runner_template.kdevtemplate  setup.py
krunner_dbus_templates/modular_krunner_python_template/%{APPNAMELC}/: Runner.py  main.py
krunner_dbus_templates/modular_krunner_python_template/%{APPNAMELC}/resources/: %{APPNAMELC}.desktop  %{APPNAMELC}_autostart.desktop  plasma-runner-%{APPNAMELC}.desktop
krunner_dbus_templates/modular_krunner_python_template/%{APPNAMELC}/utilities/: Action.py  Match.py  __init__.py
krunner_dbus_templates/simple_krunner_python_template/: %{APPNAMELC}.desktop  %{APPNAMELC}.py  %{APPNAMELC}_autostart.desktop  .gitignore  Makefile  README.md  install.sh  plasma-runner-%{APPNAMELC}.desktop  simple_krunner_python_template.kdevtemplate  uninstall.sh
python_templates/: CMakeLists.txt
qt_cpp_templates/: CMakeLists.txt
qt_cpp_templates/krunner_templates/runner_kcmodule/extendedrunnerwithconfig/src/: %{APPNAMELC}.cpp  %{APPNAMELC}.h  CMakeLists.txt  plasma-runner-%{APPNAMELC}.desktop
qt_cpp_templates/krunner_templates/runner_kcmodule/extendedrunnerwithconfig/src/config/: %{APPNAMELC}_config.cpp
qt_cpp_templates/qt_cli_templates/basic_qt_cli_template/: CMakeLists.txt
simple_desktop_application_file/: .gitignore  CMakeLists.txt  package  simple_desktop_application_file.desktop  simple_desktop_application_file.kdev4
simple_desktop_application_file/.kdev4/: simple_desktop_application_file.kdev4
simple_desktop_application_file/simple_desktop_application_file/: template.desktop
(+129 files in other folders)
