add_definitions(-DTRANSLATION_DOMAIN=\"%{APPNAMELC}\")

set(%{APPNAMELC}_SRCS %{APPNAMELC}.cpp)
add_library(%{APPNAMELC} MODULE ${%{APPNAMELC}_SRCS})
target_link_libraries(%{APPNAMELC} KF5::KIOCore KF5::KIOWidgets)

install(FILES %{APPNAMELC}.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
install(TARGETS %{APPNAMELC} DESTINATION ${PLUGIN_INSTALL_DIR})
